# reproduce-cgo2017-paper

./: .ckr.json  LICENSE  README.md
docker/.cm/: alias-a-reproduce-cgo2017-paper-x86-64  alias-u-4aa43979981de11e
docker/reproduce-cgo2017-paper-x86-64/: Dockerfile
jnotebook/.cm/: alias-a-example-cgo2017  alias-u-68b8925670162e09
jnotebook/example-cgo2017/: example-cgo2017-ck.ipynb
module/.cm/: alias-a-experiment-cgo2017  alias-a-workflow-from-cgo2017-paper  alias-u-46a6bedec34ef950  alias-u-be5044a069071727
module/experiment-cgo2017/: .module.py.swp  module.py
module/workflow-from-cgo2017-paper/: module.py
package/.cm/: alias-a-plugin-llvm-sw-prefetch-no-strides-pass  alias-a-plugin-llvm-sw-prefetch-pass  alias-u-3468db6b2578ff7d  alias-u-4339bd3b6b127b43
package/plugin-llvm-sw-prefetch-pass/: CMakeLists.txt  Makefile  SwPrefetchPass.cc  SwPrefetchPass_llvm10.cc  SwPrefetchPass_llvm10.patch  compile.sh
package/plugin-llvm-sw-prefetch-pass/.cm/: info.json  meta.json
program/.cm/: alias-a-graph500  alias-a-hashjoin-ph-2  alias-a-hashjoin-ph-8  alias-a-nas-cg  alias-a-nas-common  alias-a-nas-is  alias-a-nas-sys  alias-a-randacc  alias-u-04810be822e46a1f  alias-u-2544fd86ec43416d  alias-u-42f28f884842c988  alias-u-491f2d46f4a5a01d  alias-u-77048f4b89ac7814  alias-u-773bfa4c148d98dc  alias-u-ff8c81f53fd34d28
program/graph500/: ck_compile.sh  ck_postprocess_time.py  compile_aarch64.sh  compile_x86.sh
program/hashjoin-ph-2/: README  ck_compile.sh  ck_postprocess_time.py  compile_aarch64.sh  compile_aarch64.sh~  compile_x86.sh
program/nas-cg/: cg.c  (+8 more)
(+133 files in other folders)
